--- a/15_crqa_analysis.Rmd
+++ b/15_crqa_analysis.Rmd
@@ -9,6 +9,7 @@ output:
     theme: yeti
     toc: yes
     toc_depth: 2
+    toc_float: true
 ---
 
 ```{r Load Libraries, message=FALSE, warning=FALSE}
@@ -99,7 +100,7 @@ skim_with(numeric = list(p25 = NULL,
 skim(final)
 ```
 
-# Radius Values
+# Stats Analysis: Radius Values
 
 Because we fixed the %REC (`RR`) to 5.0, that means the radius varies for each row. See below:
 
@@ -135,7 +136,7 @@ final_summary <- final %>%
   left_join(final_n, by = c("maingroup", "direction", "hand")) %>%
   mutate(radius_se = radius_sd/sqrt(n))
   
-final_summary %>%
+p_means <- final_summary %>%
   filter(hand == "right") %>%
   ggplot(aes(x = maingroup, y = radius_mean, color = direction, fill = direction)) +
   geom_point(position = position_dodge(width = 0.25), size = 2) +
@@ -146,8 +147,18 @@ final_summary %>%
   scale_y_continuous(limits = c(20, 37)) +
   labs(x = "",
        y = "radius",
-       title = "Radius Values for 5.0% Recurrence With Right Hand Position") +
-  theme_light()
+       title = "Radius For 5% Recurrence With Right Hand Position") +
+  theme_ipsum_rc() +
+  theme(panel.grid.minor.y = element_blank())
+
+p_means
+p_means %>%
+  ggsave(filename = 'tislr_figures/radius_means_plot.png',
+         width = 12,
+         height = 9,
+         units = 'in',
+         device = 'png')
+
 
 # Fit model
 m1 <- lmer(data = final, radius ~ maingroup * direction + (1 + hand|name) + (1|story))
@@ -158,12 +169,23 @@ tidy(m1, conf.int = TRUE) %>%
 
 # Plot model coefficients
 # https://cran.r-project.org/web/packages/sjPlot/vignettes/plot_model_estimates.html
-plot_model(m1, 
+p_coef <- plot_model(m1, 
            show.values = TRUE, value.offset = .3, 
            order.terms = c(4, 1:3, 5:7),
            width = .2,
            dot.size = 1,
-           title = "Model Predictors for Radius (95% CI)")
+           title = "Model Predictors for Radius (95% CI)") +
+  theme_ipsum_rc()
+
+p_coef
+
+p_coef %>%
+  ggsave(filename = 'tislr_figures/coefficient_plot.png',
+         width = 12,
+         height = 9,
+         units = 'in',
+         device = 'png')
+
 ```
 
 The interpretation is :  
@@ -173,7 +195,7 @@ The interpretation is :
 1. We have an interaction of Maingroup & Direction, where Hearing Noivce, when confronted w reverse video, become *less coupled* to hand position. It's possible they dis-engage and engage in poorer viewing behavior in general!
 
 
-# Eye Gaze & Hand Position Time-Series Plot
+# Eye Gaze & Hand Position Plot
 
 We need a plot like this for the poster, to give people an idea of what we are talking about. This was submitted with the abstract as figure 2. Re-creating it here. 
 
@@ -211,7 +233,7 @@ y_rhand <- final %>%
 p1 <- y_averaged %>%
   filter(maingroup == "DeafEarly" | maingroup == "HearingNovice") %>%
   ggplot() + 
-  geom_line(aes(x = gaze_point_index, y = y_mean, color = maingroup), size = 0.5) +
+  geom_line(aes(x = gaze_point_index, y = y_mean, color = maingroup), size = 1) +
   geom_ribbon(aes(x = gaze_point_index, 
                   ymin = y_mean - y_se, 
                   ymax = y_mean + y_se,
@@ -220,7 +242,7 @@ p1 <- y_averaged %>%
 # Add right hand
 p1 <- p1 +
   geom_step(data = y_rhand, aes(x = gaze_point_index, y = y),
-            color = "#7CAE00", alpha = 0.7) +
+            color = "#7CAE00", alpha = 0.7, size = 1) +
   annotate("text", label = "Right Hand Position", x = 1950, y = 850, color = "#7CAE00")
 
 # Refine!
@@ -228,7 +250,26 @@ p1 <- p1 +
   scale_y_reverse(limits = c(900,300)) +
   labs(x = "time (ms)", y = "y-position (px)", title = "Eye Gaze vs. Hand Position", color = "", fill = "") +
   theme_ipsum_rc() +
-  theme(panel.grid.minor.y = element_blank())
+  theme(panel.grid.minor.y = element_blank(),
+        legend.position = "top")
 
-p1
+p1 
+
+p1 %>%
+  ggsave(filename = 'tislr_figures/eye_gaze_hand_position.png',
+         width = 12,
+         height = 9,
+         units = 'in',
+         device = 'png')
 ```
+
+# Participant N
+
+How many participants per group, anyway? 
+
+```{r}
+final %>%
+  group_by(maingroup) %>%
+  summarise(n = n_distinct(name))
+```
+
