--- a/15_crqa_analysis.Rmd
+++ b/15_crqa_analysis.Rmd
@@ -23,6 +23,7 @@ library(sjPlot)
 library(assertr)
 library(skimr)
 library(hrbrthemes)
+library(crqa)
 ```
 
 
@@ -180,7 +181,7 @@ p_coef <- plot_model(m1,
 p_coef
 
 p_coef %>%
-  ggsave(filename = 'tislr_figures/coefficient_plot.png',
+  ggsave(filename = 'tislr_figures/radius_coefficient_plot.png',
          width = 12,
          height = 9,
          units = 'in',
@@ -267,9 +268,240 @@ p1 %>%
 
 How many participants per group, anyway? 
 
-```{r}
+```{r Count N}
 final %>%
   group_by(maingroup) %>%
   summarise(n = n_distinct(name))
 ```
 
+# Entropy
+
+r_ENTR is a normalized measure of entropy - closer to 1 = chaotic system. Closer to 0 = more predictable system. The following analysis suggests that HearingNovice have a more disordered looking relationship with hand, while other groups have more orderly looking behavior. 
+
+Do we want this on the poster too? Kinda the same thing. I think no. Because it just adds to the story without much substance. Ppl will be like 'Entropy, what?'. 
+
+```{r Entropy, message=FALSE, warning=FALSE}
+
+# Plot means
+final_n <- final %>%
+  select(name, maingroup, direction, story, hand) %>%
+  distinct() %>%
+  count(maingroup, direction, hand)
+
+final_summary_entr <- final %>%
+  group_by(maingroup, direction, hand) %>%
+  summarise(entr_mean = mean(r_ENTR),
+            entr_sd = sd(r_ENTR)) %>%
+  ungroup() %>%
+  left_join(final_n, by = c("maingroup", "direction", "hand")) %>%
+  mutate(entr_se = entr_sd/sqrt(n))
+  
+p_means_entr <- final_summary_entr %>%
+  filter(hand == "right") %>%
+  ggplot(aes(x = maingroup, y = entr_mean, color = direction, fill = direction)) +
+  geom_point(position = position_dodge(width = 0.25), size = 2) +
+  geom_errorbar(aes(ymin = entr_mean - entr_se, ymax = entr_mean + entr_se),
+                position = position_dodge(width = 0.25),
+                width = 0.2,
+                size = 1) +
+  scale_y_continuous(labels = scales::percent) +
+  labs(x = "",
+       y = "normalized Shannon entropy",
+       title = "Normalized Entropy Values") +
+  theme_ipsum_rc() +
+  theme(panel.grid.minor.y = element_blank())
+
+p_means_entr
+p_means_entr %>%
+  ggsave(filename = 'tislr_figures/entropy_means_plot.png',
+         width = 12,
+         height = 9,
+         units = 'in',
+         device = 'png')
+
+
+# Fit model
+m2 <- lmer(data = final, r_ENTR ~ maingroup * direction + (1 + hand|name) + (1|story))
+tidy(m2, conf.int = TRUE) %>%
+  mutate_if(is.numeric, round, 3) %>%
+  filter(effect == 'fixed') %>%
+  select(-effect, -group)
+
+# Plot model coefficients
+# https://cran.r-project.org/web/packages/sjPlot/vignettes/plot_model_estimates.html
+p_coef_entr <- plot_model(m2, 
+           show.values = TRUE, value.offset = .3, 
+           order.terms = c(4, 1:3, 5:7),
+           width = .2,
+           dot.size = 1,
+           vline.color = 'gray50',
+           title = "Model Predictors for Normalized Entropy (95% CI)") +
+  theme_ipsum_rc() +
+  scale_y_continuous(limits = c(-0.3, 0.3))
+
+p_coef_entr
+
+p_coef_entr %>%
+  ggsave(filename = 'tislr_figures/entropy_coefficient_plot.png',
+         width = 12,
+         height = 9,
+         units = 'in',
+         device = 'png')
+```
+
+# Best and Worst CRQA Plots
+
+But we can use Entropy to let us know what the best and worst CRQA plots are. 
+
+```{r CRQA Plots}
+# Reuse optimizeParam mlpars
+mlpar <- list(lgM = 120,
+              radiusspan = 100,
+              radiussample = 10,
+              normalize = 2,
+              rescale = 2,
+              mindiagline = 2,
+              minvertline = 2,
+              tw = 0,
+              whiteline = FALSE,
+              recpt = FALSE,
+              fnnpercent = 10,
+              typeami = "maxlag")
+
+# Reuse run_crqa function
+run_crqa <- function(a, b, c, d, e){
+  crqa(a, 
+       b, 
+       radius = c, 
+       embed = d, 
+       delay = e, 
+       rescale = 2, 
+       normalize = 2, 
+       mindiagline = 2, 
+       minvertline = 2, 
+       tw = 0, 
+       whiteline = FALSE, 
+       recpt = FALSE, 
+       side = 'both')
+}
+
+# Best CRQA (lowest entropy score)
+best <- final %>%
+  filter(hand == 'right') %>%
+  arrange(r_ENTR) %>%
+  slice(2)
+
+# Worst CRQA (highest entropy score)
+worst <- final %>%
+  filter(hand == 'right') %>%
+  arrange(desc(r_ENTR)) %>%
+  slice(1)
+
+
+# Get the recurrence plot by re-running optimizeParam & CRQA 
+best_param <- optimizeParam(best$eye_y[[1]], best$hand_y[[1]], mlpar)
+best_crqa <- run_crqa(best$eye_y[[1]], best$hand_y[[1]], best_param$radius, best_param$emddim, best_param$delay)
+
+worst_param <- optimizeParam(worst$eye_y[[1]], worst$hand_y[[1]], mlpar)
+worst_crqa <- run_crqa(worst$eye_y[[1]], worst$hand_y[[1]], worst_param$radius, worst_param$emddim, worst_param$delay)
+
+
+# Plot
+# params = list(unit = 10, labelx = "Time", labely = "Time", cols = "blue", pcex = 0.25)
+# 
+# best_plot <- plotRP(best_crqa$RP, params)
+# worst_plot <- plotRP(worst_crqa$RP, params)
+
+
+# Use geom_tile
+vir_colors <- viridis::viridis(2, alpha = 1, begin = 0.2, end = 0.8, option = "D")
+
+theme_black = function(base_size = 12, base_family = "") {
+  theme_grey(base_size = base_size, base_family = base_family) %+replace%
+    theme(
+      # Specify axis options
+      axis.line = element_blank(),  
+      axis.text.x = element_blank(),  
+      axis.text.y = element_blank(),  
+      axis.ticks = element_blank(),  
+      axis.title.x = element_text(size = base_size, color = "black", margin = margin(0, 10, 0, 0)),  
+      axis.title.y = element_text(size = base_size, color = "black", angle = 90, margin = margin(0, 2, 0, 0)),  
+      axis.ticks.length = unit(0.3, "lines"),   
+      # Specify legend options
+      # legend.background = element_rect(color = NA, fill = "black"),  
+      # legend.key = element_rect(color = "white",  fill = "black"),  
+      # legend.key.size = unit(1.2, "lines"),  
+      # legend.key.height = NULL,  
+      # legend.key.width = NULL,      
+      # legend.text = element_text(size = base_size*0.8, color = "white"),  
+      # legend.title = element_text(size = base_size*0.8, face = "bold", hjust = 0, color = "white"),  
+      # legend.position = "right",  
+      # legend.text.align = NULL,  
+      # legend.title.align = NULL,  
+      # legend.direction = "vertical",  
+      # legend.box = NULL, 
+      # Specify panel options
+      panel.background = element_rect(fill = vir_colors[1], color  =  NA),  
+      panel.border = element_rect(fill = NA, color = "black", size = 2),  
+      panel.grid.major = element_blank(),  
+      panel.grid.minor = element_blank(),  
+      panel.spacing = unit(0.5, "lines"),
+      # Specify facetting options
+      # strip.background = element_rect(fill = "grey30", color = "grey10"),  
+      # strip.text.x = element_text(size = base_size*0.8, color = "white"),  
+      # strip.text.y = element_text(size = base_size*0.8, color = "white",angle = -90),  
+      # Specify plot options
+      plot.background = element_rect(color = "white", fill = "white"),  
+      plot.title = element_text(size = base_size*1.2, color = "white"),  
+      plot.margin = unit(rep(1, 4), "lines")
+    )
+}
+
+best_rp <- summary(best_crqa$RP) %>%
+  as_tibble() %>%
+  ggplot(aes(x = i, y = j)) +
+  geom_tile(fill = vir_colors[2]) +
+  coord_fixed(expand = FALSE, ratio = 1) +
+  theme_black() +
+  labs(x = 'Eye Gaze Position',
+       y = 'Hand Position')
+
+worst_rp <- summary(worst_crqa$RP) %>%
+  as_tibble() %>%
+  ggplot(aes(x = i, y = j)) +
+  geom_tile(fill = vir_colors[2]) +
+  coord_fixed(expand = FALSE, ratio = 1) +
+  theme_black() +
+  labs(x = 'Eye Gaze Position',
+       y = 'Hand Position')
+
+
+# save_plot("tislr_figures/best_plot.png", best_plot)
+# save_plot("tislr_figures/worst_plot.png", worst_plot)
+
+# Make plots
+best_rp %>%
+  ggsave(filename = 'tislr_figures/best_rp.png',
+         width = 12,
+         height = 12,
+         units = 'in',
+         device = 'png')
+
+worst_rp %>%
+  ggsave(filename = 'tislr_figures/worst_rp.png',
+         width = 12,
+         height = 12,
+         units = 'in',
+         device = 'png')
+
+# Print plot and info
+best_rp
+
+best %>%
+  select(maingroup, story, direction, hand)
+
+worst_rp
+
+worst %>%
+  select(maingroup, story, direction, hand)
+```
