--- a/15_crqa_analysis.Rmd
+++ b/15_crqa_analysis.Rmd
@@ -145,17 +145,20 @@ p_means <- final_summary %>%
                 position = position_dodge(width = 0.25),
                 width = 0.2,
                 size = 1) +
-  scale_y_continuous(limits = c(20, 37)) +
+  scale_y_continuous(limits = c(22, 34)) +
   labs(x = "",
        y = "radius",
-       title = "Radius For 5% Recurrence With Right Hand Position") +
+       title = "Radius For 5% Recurrence (Right Hand)") +
+  guides(color = FALSE,
+         fill = FALSE) +
   theme_ipsum_rc() +
-  theme(panel.grid.minor.y = element_blank())
+  theme(panel.grid.minor.y = element_blank(),
+        plot.title = element_text(color = 'white'))
 
 p_means
 p_means %>%
   ggsave(filename = 'tislr_figures/radius_means_plot.png',
-         width = 12,
+         width = 9,
          height = 9,
          units = 'in',
          device = 'png')
@@ -175,18 +178,23 @@ p_coef <- plot_model(m1,
            order.terms = c(4, 1:3, 5:7),
            width = .2,
            dot.size = 1,
-           title = "Model Predictors for Radius (95% CI)") +
-  theme_ipsum_rc()
+           title = "Model Predictors for Radius (95% CI)",
+           vline.color = "gray80") +
+  scale_y_continuous(limits = c(-8, 7)) +
+  theme_ipsum_rc() +
+  theme(panel.grid.minor.x = element_blank(),
+        plot.title = element_text(color = 'white'))
 
 p_coef
 
 p_coef %>%
   ggsave(filename = 'tislr_figures/radius_coefficient_plot.png',
          width = 12,
-         height = 9,
+         height = 7,
          units = 'in',
          device = 'png')
 
+tab_model(m1)
 ```
 
 The interpretation is :  
@@ -243,23 +251,31 @@ p1 <- y_averaged %>%
 # Add right hand
 p1 <- p1 +
   geom_step(data = y_rhand, aes(x = gaze_point_index, y = y),
-            color = "#7CAE00", alpha = 0.7, size = 1) +
-  annotate("text", label = "Right Hand Position", x = 1950, y = 850, color = "#7CAE00")
+            color = "#7CAE00", alpha = 0.7, size = 1) 
+#  annotate("text", label = "Right Hand Position", x = 1950, y = 850, color = "#7CAE00")
 
 # Refine!
 p1 <- p1 +
   scale_y_reverse(limits = c(900,300)) +
-  labs(x = "time (ms)", y = "y-position (px)", title = "Eye Gaze vs. Hand Position", color = "", fill = "") +
-  theme_ipsum_rc() +
+  labs(x = "", 
+       y = "", 
+       title = "", 
+       color = "", 
+       fill = "") +
+  guides(fill = FALSE,
+         color = FALSE) +
+ theme_linedraw() +
   theme(panel.grid.minor.y = element_blank(),
-        legend.position = "top")
+        legend.position = "top",
+        panel.border = element_blank(),
+        axis.ticks = element_blank())
 
 p1 
 
 p1 %>%
   ggsave(filename = 'tislr_figures/eye_gaze_hand_position.png',
          width = 12,
-         height = 9,
+         height = 8,
          units = 'in',
          device = 'png')
 ```
