--- a/09finaldata.Rmd
+++ b/09finaldata.Rmd
@@ -1347,7 +1347,13 @@ eyegaze_heat <- fulldata %>%
     maingroup == "DeafLate" ~ "Deaf Late",
     maingroup == "HearingLate" ~ "Hearing Late",
     maingroup == "HearingNovice" ~ "Hearing Novice"
-    ))
+    )) %>%
+  mutate(percent_lab = case_when(
+    percent >= 0.01 ~ as.character(
+                        paste0(
+                          round(percent, 2) * 100, '%')),
+    percent < 0.01 ~ NA_character_
+  ))
 
 eyegaze_heat_all <- fulldata %>%
   ungroup() %>%
@@ -1375,14 +1381,15 @@ eyegaze_heat_all <- fulldata %>%
 ggplot(eyegaze_heat, aes(x = maingroup, y = aoi)) +
   geom_tile(aes(fill=percent),color="lightgray",na.rm=TRUE) + 
 #  scale_fill_viridis(option = "viridis", direction=-1, limits = c(0,.7), labels = percent, name = "looking time") +
-    scale_fill_gradient(low = "#ffffff", high = "#08519c", space = "Lab", limits = c(0,.704), labels = percent, name = "looking time", na.value = "grey50") +
+  geom_text(aes(label = percent_lab), size = 3.5) +
+    scale_fill_gradient(low = "#ffffff", high = "#1c6aba", space = "Lab", limits = c(0,.704), labels = percent, name = "looking time", na.value = "grey50") +
   theme_bw() +
   theme(axis.text.x=element_text(angle=30,hjust=1),
         strip.text.x = element_text(size = 11, color = "black", face = "italic"), 
         strip.background = element_rect(colour = "white", fill = "white"),
         panel.grid.major = element_line(color = "white")) +
   facet_grid(. ~ direction) +
-  ylab("") + xlab("") + ggtitle("Eye Gaze Heat Map, by Direction") + 
+  ylab("") + xlab("") + ggtitle("Eye Gaze Heat Map, by Direction") + guides(fill = F) +
   scale_y_discrete(expand=c(0,0)) +
   scale_x_discrete(expand = c(0,0))
 
